Bug 115563 - StyleResolver: Have "list of matched rules" API vend internal types instead of CSSOM wrappers.
Summary: StyleResolver: Have "list of matched rules" API vend internal types instead o...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andreas Kling
URL:
Keywords:
Depends on: 115855
Blocks:
  Show dependency treegraph
 
Reported: 2013-05-03 11:41 PDT by Andreas Kling
Modified: 2013-05-09 04:45 PDT (History)
7 users (show)

See Also:


Attachments
Patch (19.90 KB, patch)
2013-05-03 11:41 PDT, Andreas Kling
webkit-ews: commit-queue-
Details | Formatted Diff | Diff
Patch v2 (22.26 KB, patch)
2013-05-03 11:58 PDT, Andreas Kling
webkit-ews: commit-queue-
Details | Formatted Diff | Diff
Patch v3 (22.25 KB, patch)
2013-05-03 12:06 PDT, Andreas Kling
webkit-ews: commit-queue-
Details | Formatted Diff | Diff
Patch v4 (22.25 KB, patch)
2013-05-03 12:18 PDT, Andreas Kling
koivisto: review+
commit-queue: commit-queue-
Details | Formatted Diff | Diff
Archive of layout-test-results from webkit-cq-01 for mac-mountainlion (528.88 KB, application/zip)
2013-05-03 13:17 PDT, WebKit Commit Bot
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2013-05-03 11:41:16 PDT
StyleResolver: Have "list of matched rules" API vend internal types instead of CSSOM wrappers.
Comment 1 Andreas Kling 2013-05-03 11:41:51 PDT
Created attachment 200446 [details]
Patch
Comment 2 Early Warning System Bot 2013-05-03 11:46:34 PDT
Comment on attachment 200446 [details]
Patch

Attachment 200446 [details] did not pass qt-ews (qt):
Output: http://webkit-queues.appspot.com/results/384528
Comment 3 Early Warning System Bot 2013-05-03 11:48:18 PDT
Comment on attachment 200446 [details]
Patch

Attachment 200446 [details] did not pass qt-wk2-ews (qt-wk2):
Output: http://webkit-queues.appspot.com/results/337526
Comment 4 Andreas Kling 2013-05-03 11:58:59 PDT
Created attachment 200450 [details]
Patch v2

Try to fix Qt build.
Comment 5 Early Warning System Bot 2013-05-03 12:04:12 PDT
Comment on attachment 200450 [details]
Patch v2

Attachment 200450 [details] did not pass qt-wk2-ews (qt-wk2):
Output: http://webkit-queues.appspot.com/results/332540
Comment 6 Early Warning System Bot 2013-05-03 12:04:51 PDT
Comment on attachment 200450 [details]
Patch v2

Attachment 200450 [details] did not pass qt-ews (qt):
Output: http://webkit-queues.appspot.com/results/384534
Comment 7 Andreas Kling 2013-05-03 12:06:55 PDT
Created attachment 200454 [details]
Patch v3

why qt why
Comment 8 Early Warning System Bot 2013-05-03 12:17:01 PDT
Comment on attachment 200454 [details]
Patch v3

Attachment 200454 [details] did not pass qt-ews (qt):
Output: http://webkit-queues.appspot.com/results/266028
Comment 9 Andreas Kling 2013-05-03 12:18:36 PDT
Created attachment 200455 [details]
Patch v4

why is programming hard.
Comment 10 Antti Koivisto 2013-05-03 12:31:30 PDT
r=me
Comment 11 WebKit Commit Bot 2013-05-03 13:17:12 PDT
Comment on attachment 200455 [details]
Patch v4

Rejecting attachment 200455 [details] from commit-queue.

New failing tests:
http/tests/security/cross-origin-getMatchedCSSRules.html
http/tests/security/cross-origin-getMatchedCSSRules2.html
fast/dom/Window/getMatchedCSSRules-with-invalid-pseudo-elements.html
fast/dom/StyleSheet/detached-parent-rule-without-wrapper.html
fast/css/modify-ua-rules-from-javascript.html
Full output: http://webkit-queues.appspot.com/results/333579
Comment 12 WebKit Commit Bot 2013-05-03 13:17:14 PDT
Created attachment 200465 [details]
Archive of layout-test-results from webkit-cq-01 for mac-mountainlion

The attached test failures were seen while running run-webkit-tests on the commit-queue.
Bot: webkit-cq-01  Port: mac-mountainlion  Platform: Mac OS X 10.8.3
Comment 13 Andreas Kling 2013-05-03 13:42:32 PDT
Committed r149532: <http://trac.webkit.org/changeset/149532>
Comment 14 Csaba Osztrogonác 2013-05-09 04:45:00 PDT
(In reply to comment #13)
> Committed r149532: <http://trac.webkit.org/changeset/149532>

FYI: It caused a serious regression - https://bugs.webkit.org/show_bug.cgi?id=115855